{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 10,
  "lineage": "9ec2a933-6cb5-9703-ecfb-542cc1cff8c9",
  "resources": [
    {
      "module": "module.pow_faucet_node",
      "mode": "managed",
      "type": "aws_eip",
      "name": "pow_faucet_node_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0719cc2334937e517",
            "arn": "arn:aws:ec2:us-east-1:831981619011:elastic-ip/eipalloc-0719cc2334937e517",
            "association_id": "eipassoc-0634ffabee867d90a",
            "domain": "vpc",
            "id": "eipalloc-0719cc2334937e517",
            "instance": "i-0522f8855905a9e5b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c25a0412c3f4c480",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-98-83-79-155.compute-1.amazonaws.com",
            "public_ip": "98.83.79.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pow-faucet-node-eip"
            },
            "tags_all": {
              "Name": "pow-faucet-node-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "module.pow_faucet_node.aws_instance.pow_faucet_node",
            "module.pow_faucet_node.aws_security_group.pow_faucet_node",
            "module.pow_faucet_node.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.pow_faucet_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.pow_faucet_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pow_faucet_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:831981619011:instance/i-0522f8855905a9e5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0522f8855905a9e5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "pow-faucet-node-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c25a0412c3f4c480",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-3-236-185-19.compute-1.amazonaws.com",
            "public_ip": "3.236.185.19",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:831981619011:key/70b49881-a651-4db0-99cc-3b46ec61b2cb",
                "throughput": 125,
                "volume_id": "vol-02cdcbc4425cd707a",
                "volume_size": 1024,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d7ddecc2945c5ba5",
            "tags": {
              "Name": "pow-faucet-node"
            },
            "tags_all": {
              "Name": "pow-faucet-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d2bf3bdee9d42b5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "module.pow_faucet_node.aws_security_group.pow_faucet_node",
            "module.pow_faucet_node.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.pow_faucet_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.pow_faucet_node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pow_faucet_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831981619011:security-group/sg-07d2bf3bdee9d42b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d2bf3bdee9d42b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "pow-faucet-node-20260112230721399000000001",
            "name_prefix": "pow-faucet-node-",
            "owner_id": "831981619011",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a379e29a3e38c0b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.pow_faucet_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pow_faucet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831981619011:internet-gateway/igw-0a9ac9c1bbddf84ca",
            "id": "igw-0a9ac9c1bbddf84ca",
            "owner_id": "831981619011",
            "tags": {
              "Name": "pow-faucet-vpc"
            },
            "tags_all": {
              "Name": "pow-faucet-vpc"
            },
            "vpc_id": "vpc-0a379e29a3e38c0b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.pow_faucet_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831981619011:route-table/rtb-05ec2d1bb1dc73c6b",
            "id": "rtb-05ec2d1bb1dc73c6b",
            "owner_id": "831981619011",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9ac9c1bbddf84ca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pow-faucet-vpc-public"
            },
            "tags_all": {
              "Name": "pow-faucet-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a379e29a3e38c0b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.pow_faucet_vpc",
            "module.vpc.aws_vpc.pow_faucet_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b82f81a668d2c16c",
            "route_table_id": "rtb-05ec2d1bb1dc73c6b",
            "subnet_id": "subnet-0d7ddecc2945c5ba5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.pow_faucet_vpc",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.pow_faucet_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831981619011:subnet/subnet-0d7ddecc2945c5ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7ddecc2945c5ba5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831981619011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pow-faucet-vpc-public"
            },
            "tags_all": {
              "Name": "pow-faucet-vpc-public"
            },
            "vpc_id": "vpc-0a379e29a3e38c0b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.pow_faucet_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pow_faucet_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831981619011:vpc/vpc-0a379e29a3e38c0b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cc418a3e1a63ce0",
            "default_route_table_id": "rtb-0d4f5cce36155f173",
            "default_security_group_id": "sg-09868a587f09202cc",
            "dhcp_options_id": "dopt-016148eb9e93a370f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a379e29a3e38c0b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d4f5cce36155f173",
            "owner_id": "831981619011",
            "tags": {
              "Name": "pow-faucet-vpc"
            },
            "tags_all": {
              "Name": "pow-faucet-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}